--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,400&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="site.css">
+  <link rel="stylesheet" type="text/css" href="animate.css">
+  <script src="site.js"></script>
 </head>
 <body>
   <section>
     <div>
-        <h1>0</h1>
+        <h1 id="number">0</h1>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
     </div>
   </section>
