Better animation usage and timers

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body>
   <section>
     <div>
-        <h1 id="number">0</h1>
+        <h1 id="number">23</h1>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
     </div>
   </section>
   <footer>
-    <p>Questions? Feel free to <a href="mailto:sdbagel@gmail.com">Email Us</a></p>
+    <p>No, it's not real.</p>
+    <br>
+    <p>Questions? Feel free to <a href="mailto:sdbagel@gmail.com">email me!</a></p>
     <p>This page is open source on <a href="https://github.com/SDBagel">GitHub!</a></p>
-    <p>&#9400; SDProductions 2019</p>
+    <p>Built with <a href="https://daneden.github.io/animate.css/">Animate.css</a> and pro <a href="https://bing.com">search skills</a>.</p>
+    <p>&#9400; SDBagel 2019</p>
   </footer>
 </body>
 </html>
