Not using animate.css
Didn't work with the animations I wanted, easier to do it with stock js + css.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="site.css">
-  <link rel="stylesheet" type="text/css" href="animate.css">
   <script src="site.js"></script>
 </head>
 <body>
@@ -14,6 +13,7 @@
     <div>
         <h1 id="number">23</h1>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
+        <button id="skipButton" onclick="skip()">Skip to #24</button>
     </div>
   </section>
   <footer>
@@ -21,7 +21,7 @@
     <br>
     <p>Questions? Feel free to <a href="mailto:sdbagel@gmail.com">email me!</a></p>
     <p>This page is open source on <a href="https://github.com/SDBagel">GitHub!</a></p>
-    <p>Built with <a href="https://daneden.github.io/animate.css/">Animate.css</a> and pro <a href="https://bing.com">search skills</a>.</p>
+    <p>Built with pro <a href="https://bing.com">search skills</a>.</p>
     <p>&#9400; SDBagel 2019</p>
   </footer>
 </body>
