Revert "sketchy popup ads"
This reverts commit f8df9cd038c536f59f330383bd2e60e09c31009a.

--- a/index.html
+++ b/index.html
@@ -11,43 +11,15 @@
 <body>
   <section>
     <div>
-        <h1 id="number">0</h1>
+        <h1 id="number">23</h1>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
-        <button id="startButton" onclick="start()">Start!</button>
-        <button id="skipButton" onclick="skip()">Skip to #24!</button>
-    </div>
-    <div id="overlay">
-      <div id="cookiepolicy" class="overlaycard">
-        <h2>Cookie Policy</h2>
-        <p>Our site does not use cookies, and by law, we aren't required to tell you this, but we will anyway.</p>
-        <div>
-          <button onclick="iteratePopup()">Okay</button>
-          <button onclick="iteratePopup()">Nah</button>
-        </div>
-      </div>
-      <div id="newsletter" class="overlaycard">
-        <h2>Newsletter</h2>
-        <p>Sign up for our newsletter!</p>
-        <input type=email placeholder="Enter your email!">
-        <br>
-        <div>
-          <button onclick="iteratePopup()">Okay</button>
-          <button onclick="iteratePopup()">Nah</button>
-        </div>
-      </div>
-      <div id="donate" class="overlaycard">
-        <h2>Donate</h2>
-        <p>Our site lives not because of donators like you. <a href="#">Donate now!</a></p>
-        <div>
-          <button onclick="iteratePopup()">Okay</button>
-          <button onclick="iteratePopup()">Nah</button>
-        </div>
-      </div>
+        <button id="skipButton" onclick="skip()">Skip to #24</button>
     </div>
   </section>
   <footer>
     <p>No, it's not real.</p>
     <br>
+    <p>Questions? Feel free to <a href="mailto:sdbagel@gmail.com">email me!</a></p>
     <p>This page is open source on <a href="https://github.com/SDBagel">GitHub!</a></p>
     <p>Built with pro <a href="https://bing.com">search skills</a>.</p>
     <p>&#9400; SDBagel 2019</p>
