Go faster button & percentage update

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <section>
     <div>
         <h1 id="number">0</h1>
+        <p id="percent">0% of the way there!</p>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
         <button id="skipButton" onclick="skip()">Skip to #24</button>
+        <button onclick="goFaster()">Go Faster!</button>
     </div>
   </section>
   <footer>
