--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <p id="percent">0% of the way there!</p>
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
         <button id="skipButton" onclick="skip()">Skip to #24</button>
-        <button onclick="goFaster()">Go Faster!</button>
+        <button id="gofasterbutton" onclick="goFaster()">Go Faster!</button>
+          <button id="claim">
+              <a href="https://sdproductions.github.io/claim">Claim Prize!
+              </a></button>
     </div>
   </section>
   <footer>
-    <p>No, it's not real.</p>
+    <p>Turbolegit.</p>
     <br>
     <p>Questions? Feel free to <a href="mailto:sdbagel@gmail.com">email me!</a></p>
     <p>This page is open source on <a href="https://github.com/SDBagel">GitHub!</a></p>
