Fix some UI/linking stuff

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h3>Wait until the number reaches 25 to receive a free $25 gift card!</h3>
         <button id="skipButton" onclick="skip()">Skip to #24</button>
         <button id="gofasterbutton" onclick="goFaster()">Go Faster!</button>
-          <button id="claim">
-              <a href="https://sdproductions.github.io/claim">Claim Prize!
-              </a></button>
+        <button id="claim"><a href="https://sdproductions.github.io/p/claim">
+          Claim Prize!
+        </a></button>
     </div>
   </section>
   <footer>
