--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="site.js"></script>
 </head>
 <body>
+  <a href="https://www.bing.com/videos/search?q=youtube+never+gonna+give+you+up&docid=608043084797575601&mid=4E7B1C0F8E67E9F7B1364E7B1C0F8E67E9F7B136&view=detail&ru=%2fsearch%3fq%3dnever%2bgonna%2bgive%2byou%2bup%2blyrics%26PC%3dU531%26cvid%3de2fc377231e245d3990fe8ad182b0907%26FORM%3dANAB01%26setLang%3den"><img src="sketchy ads.jpg" id="ad"></a>
   <section>
     <div>
         <h1 id="number">0</h1>
